# location-service

./: CMakeLists.txt  COPYING  Jenkinsfile  _clang-format  astyle-config  snapcraft.yaml  symbols.map
cmake/: PrePush.cmake
data/: CMakeLists.txt  com.ubuntu.location.Service.conf  ubuntu-location-service-connectivity.pc.in  ubuntu-location-service-trust-stored.conf.in  ubuntu-location-service.conf.in  ubuntu-location-service.pc.in
data/location/dbus/: provider.xml  service.xml  session.xml
examples/service/: CMakeLists.txt  client.cpp  program_options.h  service.1  service.1.ronn  service.cpp  service.md
examples/standalone/connectivity/: CMakeLists.txt  connectivity.cpp
po/: CMakeLists.txt  aa.po  af.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  ca@valencia.po  co.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  frp.po  ga.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  (+49 more)
qt/position/: CMakeLists.txt  core_geo_position_info_source.cpp  core_geo_position_info_source.h  core_geo_position_info_source_factory.cpp  core_geo_position_info_source_factory.h  plugin.json  position.qrc
src/location/: CMakeLists.txt  always_granting_permission_manager.h  boost_ptree_settings.cpp  boost_ptree_settings.h  bus.h  config.h.in  configuration.h  criteria.cpp  daemon.cpp  daemon.h  daemon_main.cpp  default_permission_manager.cpp  default_provider_selection_policy.cpp  default_provider_selection_policy.h  dummy_service.cpp  dummy_service.h  engine.cpp  engine.h  event.cpp  features.cpp  fusion_provider.cpp  fusion_provider_selection_policy.cpp  fusion_provider_selection_policy.h  init_and_shutdown.cpp  init_and_shutdown.h  logging.h  newer_or_more_accurate_update_selector.h  non_selecting_provider_selection_policy.cpp  non_selecting_provider_selection_policy.h  permission_manager.h  position.cpp  provider.cpp  provider_factory.cpp  provider_factory.h  provider_registry.cpp  provider_registry.h  provider_selection.h  proxy_provider.cpp  result.h  runtime.cpp  (+28 more)
src/location/cmds/: list.cpp  list.h  monitor.cpp  monitor.h  provider.cpp  provider.h  run.cpp  run.h  set.cpp  set.h  status.cpp  status.h  test.cpp  test.h
src/location/connectivity/: cached_radio_cell.cpp  cached_radio_cell.h  cached_wireless_network.cpp  cached_wireless_network.h  dummy_connectivity_manager.h  manager.cpp  nm.h  ofono.h  ofono_nm_connectivity_manager.cpp  ofono_nm_connectivity_manager.h  radio_cell.cpp  w11t.xml  w11t_manager.cpp  w11t_manager.h  wireless_network.cpp
src/location/dbus/: bus.cpp  bus.h  codec.cpp  codec.h  service.h  service.xml  session.h  session.xml  util.h
src/location/dbus/skeleton/: service.cpp  service.h  session.cpp  session.h
src/location/dbus/stub/: service.cpp  service.h  session.cpp  session.h
src/location/events/: all.h  reference_position_updated.cpp  registry.cpp  registry.h  wifi_and_cell_id_reporting_state_changed.cpp
src/location/glib/: context.cpp  holder.h  runtime.cpp  runtime.h  serializing_bus.cpp  serializing_bus.h  shared_object.h  util.cpp  util.h
src/location/nmea/: cardinal_direction.h  date.h  fusion_adapt.h  generator.h  gga.h  gll.h  grammar.h  gsa.h  gsv.h  latitude.h  longitude.h  mode.h  rmc.h  scanner.cpp  scanner.h  sentence.cpp  sentence.h  status.h  talker.h  txt.h  utc.h  vtg.h
src/location/nmea/gps/: fix_mode.h
src/location/providers/: CMakeLists.txt  config.cpp  proxy.cpp  proxy.h  state_tracking_provider.cpp  state_tracking_provider.h
src/location/providers/dummy/: delayed_provider.cpp  delayed_provider.h  provider.cpp  provider.h
src/location/providers/fusion/: CMakeLists.txt  newer_or_more_accurate_update_selector.h  newer_update_selector.h  provider.cpp  provider.h  update_selector.h
src/location/providers/geoclue/: CMakeLists.txt  geoclue.h  provider.cpp  provider.h
src/location/providers/gps/: CMakeLists.txt  android_hardware_abstraction_layer.cpp  android_hardware_abstraction_layer.h  gps.conf  hardware_abstraction_layer.cpp  hardware_abstraction_layer.h  net_cpp_gps_xtra_downloader.h  null_gps_xtra_downloader.h  provider.cpp  provider.h  sntp_client.cpp  sntp_client.h  sntp_reference_time_source.cpp  sntp_reference_time_source.h
src/location/service/: config.h.in  configuration.h  daemon.cpp  daemon.h  daemon_cli_main.cpp  daemon_main.cpp  dbus_connection_factory.h  default_configuration.cpp  default_configuration.h  default_permission_manager.cpp  default_permission_manager.h  demultiplexing_reporter.cpp  demultiplexing_reporter.h  harvester.cpp  harvester.h  ichnaea_reporter.cpp  ichnaea_reporter.h  implementation.cpp  implementation.h  interface.h  program_options.h  provider_daemon.cpp  provider_daemon.h  provider_daemon_main.cpp  runtime.cpp  runtime.h  runtime_tests.cpp  runtime_tests.h  skeleton.cpp  skeleton.h  state.cpp  state.h  stub.cpp  stub.h  trust_store_permission_manager.cpp  trust_store_permission_manager.h
src/location/util/: benchmark.cpp  benchmark.h  cli.cpp  cli.h  do_not_copy_or_move.h  flags.h  settings.cpp  settings.h  well_known_bus.cpp  well_known_bus.h
tests/: CMakeLists.txt  acceptance_tests.cpp  accuracy_test.cpp  accuracy_tests.cpp  app_armor_testing_profile  boost_ptree_settings_test.cpp  bug_1447110.cpp  connectivity_manager_test.cpp  controller_test.cpp  criteria_test.cpp  cross_process_sync.h  daemon_and_cli_tests.cpp  default_permission_manager_test.cpp  delayed_service_test.cpp  demultiplexing_reporter_test.cpp  did_finish_successfully.h  dummy_provider_tests.cpp  engine_test.cpp  espoo_provider_test.cpp  event_test.cpp  fork_and_run.h  geoclue_provider_test.cpp  gps_provider_test.cpp  harvester_test.cpp  heading_test.cpp  ichnaea_reporter_test.cpp  mock_connectivity_manager.h  mock_engine.h  mock_event_consumer.h  mock_event_receiver.h  mock_network_manager.h  mock_ofono.h  mock_provider.h  mock_reporter.h  null_provider_selection_policy.h  position_test.cpp  provider_factory_test.cpp  provider_registry_test.cpp  provider_selection_policy_test.cpp  provider_test.cpp  (+15 more)
(+393 files in other folders)
